starting of 2nd

--- a/index.html
+++ b/index.html
@@ -95,7 +95,32 @@
 
 </header>
 
+<main class="bg-[#262626] min-h-screen">
 
+
+    <div class="hero  min-h-screen">
+        <div class="hero-content flex-col lg:flex-row-reverse">
+          <img
+            src="https://img.daisyui.com/images/stock/photo-1635805737707-575885ab0820.webp"
+            class="max-w-sm rounded-lg shadow-2xl"
+          />
+          <div>
+            <h1 class="text-5xl text-[#F9B800] text-[20px] font-medium max-w-[530px]">Quisque porttitor vitae vel amet neque scelerisque mattis. Consectetur nibh velit magna consectetur leo. </h1>
+            <p class="text-[50px] font-extrabold text-white">
+                Cursus Integer Conseq
+                 
+            </p>
+            <p class="text-[50px] font-extrabold text-white ">
+               
+                Aliquam Tristique. 
+            </p>
+            <button class="btn btn-primary">Get Started</button>
+          </div>
+        </div>
+      </div>
+
+
+</main>
 
 </body>
 </html>
